[package]
name = "s2v"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.82"

clap = "4.5.4"

# The most convenient API
base64 = "0.13.1"

serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.116"

tera = "1.19.1"

log = "0.4.21"
log4rs = "1.3.0"