[package]
name = "s2v"
version = "1.2.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.86"

clap = "4.5.6"

base64 = "0.22.1"

serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.117"

tera = "1.20.0"

log = "0.4.21"
log4rs = "1.3.0"